# BiliScriptor

./: .gitignore  AGENTS.md  B站视频解析百科.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  fetch_bilibili_subtitles.py  login_bilibili_qr.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
bili_md/: __init__.py  cli.py  danmaku_pb.py  extractors.py  login.py  pipeline.py  utils.py
biliscriptor/: cli.py  client.py  extractors.py  logging_config.py  login.py  pipeline.py  qr_login.py  report.py  utils.py
tests/: test_core.py  test_unittest.py
