[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biliscriptor"
version = "0.1.0"
description = "BiliScriptor / 哔稿匠: export traceable Markdown-ready Bilibili data packages."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
biliscriptor = "biliscriptor.cli:main"

[tool.setuptools]
packages = ["biliscriptor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
